nft-preview-card-component Add max-width: 100% to the card to stop it from going out the side of the screen on smaller screens.

--- a/nft-preview-card-component/styles/main.css
+++ b/nft-preview-card-component/styles/main.css
@@ -23,6 +23,7 @@ body {
     right: 0;
     margin: auto;
     border-radius: 15px;
+    max-width: 100%
 }
 
 .img-container {
